Version 0.4.6
------------------------------------------------------------------------------

NEW FEATURES

* added two arguments keep_warning and keep_message in evaluate() so that it
  is possible not to capture warnings or messages now

BUG FIXES

* fixed #25: plots can be correctly recorded under a complex layout now
  (#25, thanks, Jack Tanner and Andy Barbour)

Version 0.4.4
------------------------------------------------------------------------------

BUG FIXES

* Perspective plots from `persp()` are captured now (thanks to Harvey Lime
  and Yihui Xie)

* If an error occurs during printing a visible value, evaluate will halt on
  a cryptic error "operator is invalid for atomic vectors" (#26, fixed by
  Yihui Xie)

* If the internal connection was accidentally closed by the user, a more
  informative message will show up (#23)

* Now the graphical device will always try to record graphics by default (when
  new_device = TRUE) (#34)

* Some empty and incomplete plots caused by par() or layout() will be
  filtered out correctly for R 3.0 (#35)

MAINTAINENCE

* Yihui Xie is the new maintainer of this package now

Version 0.4.3
------------------------------------------------------------------------------

NEW FEATURES

* Added `output_handler` argument to `evaluate`. Should be a
  `output_handler` object, which is a list of functions for handling
  each type of result, prior to printing of visible return
  values. This allows clients to override the console-like printing of
  values, while still processing them in the correct temporal
  context. The other handlers are necessary to convey the correct
  ordering of the output. This essentially provides stream-based
  processing, as an alternative to the existing deferred processing.

* New option, `stop_on_error` which controls behaviour when errors
  occur.  The default value, `0`, acts like you've copied and pasted
  the code into the console, and continues to execute all code. `1`